--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,6 +184,51 @@ label {
 .error {
 	color: red;
 }
+.view-back{
+	display: flex;
+}
+
+.view-back-btn {
+	align-items: flex-end;
+	text-decoration: none;
+	margin: 5px;
+	border-radius: 5px;
+	border: none;
+	cursor: pointer;
+	padding: 5px 10px ;
+	background-color: #379deb;
+	color: white;
+	transition: background-color 0.3s ease;
+}
+
+.pagination {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-top: 1rem;
+}
+
+.pagination button {
+	width: 35px;
+	height: 35px;
+	font-family: inherit;
+	font-weight: 600;
+	font-size: 16px;
+	margin: 0 10px;
+	border-radius: 6px;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	background: transparent;
+	color: rgb(162, 162, 162);
+	border-color: #eee;
+}
+
+.pagination button.active {
+	font-weight: 900;
+	border-color: #101010;
+	background: #ffe400;
+	color: #101010;
+}
 
 @media (max-width: 450px) {
     .top_card,
